--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".CharacterEditionActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
