--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    //recreate layouts folder
+    sourceSets {
+        main {
+            res.srcDirs =
+                    [
+                            'src/main/res',
+                            'src/main/res/layouts',
+                            'src/main/res/layouts/activity',
+                            'src/main/res/layouts/fragment',
+                            'src/main/res/layouts/view',
+                            'src/main/res/layouts/adapter'
+                    ]
+        }
+    }
 }
 
 dependencies {
