--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.CharactereDisplayActivity"></activity>
+        <activity
+            android:name=".activity.CharacterDisplayActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".activity.CharacterSelectionActivity"
             android:theme="@style/AppTheme.NoActionBar">
